--- a/style.css
+++ b/style.css
@@ -58,3 +58,27 @@
 .banner{
     background-image: linear-gradient(to right,#6bc449 ,#6ad72f);
 }
+#footer,#footer1,#footer2{
+    background-color: black;
+}
+.button{
+    background-color: #6bc449;
+}
+#banner-img{
+    background-image: url("images/banner-new.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+.button1{
+    background-color: #6bc449;
+    margin-bottom: 20px;
+    width: 20%;
+    height: 36px;
+}
+.bpad{
+    margin-top: 50px;
+    background-color: white;
+}
